--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
-     <!-- My style -->
-     <link rel="stylesheet" href="css/style.css">
+    <!-- My style -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- VueJS -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <!-- JavaScript -->
+    <script defer src="js/script.js"></script>
 
 </head>
 <body>
+    <div id="root">
+        
+    </div>
     
 </body>
 </html>
