--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- My style -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Axios -->
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+
     <!-- VueJS -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
@@ -24,7 +27,7 @@
 </head>
 <body>
     <div id="root">
-        
+
     </div>
     
 </body>
