--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
 
 </head>
 <body>
-    <div id="root">
+    <div id="root" class="p-5">
 
+        <!-- List Email -->
+        <ul>
+            <li v-for="email in emails">{{ email }}</li>
+        </ul>
+        
+        <!-- Error Message -->
+        <div v-if="errorMessage" class=" alert alert-danger">
+            {{errorMessage}}
+        </div>
     </div>
     
 </body>
